--- a/q/18.html
+++ b/q/18.html
@@ -4,14 +4,11 @@
 <meta name="description" content="It will make your clothes look beautiful and unique, if you sewing the flowers embroidery lace neckline collar appliques on the clothesMaterial: polyester/fabric; Color: Pink&amp;wine red and brown; Only use of sewing(have no glue on back, do not iron on)Size: Approx.full 18cm width x 43cm l">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/q/c.css">
+<link rel="stylesheet" href="/c.css">
 <header>
   <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
-    </div>
-    <h1>
-      zalalaa<span>.</span>com
-    </h1>
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
+    <h1>zalalaa<span>.</span>com</h1>
   </a>
 </header>
 <main class="index">
@@ -19,7 +16,7 @@
 <h2>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</h2>
 <time>2024-06-10</time>
 <div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"><img src="/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" />Buy Now  $:12.99 </a><b>S/N: A18</b></p>
+ <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"><img src="/q/py.webp" width="124" height="33" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" />Buy Now  $:12.99 </a><b>S/N: A18</b></p>
 </div>
  <div class="grid">
 <img src="/q/upload/other/20240626/1719391194190860.webp" alt="[content::title],[content::date]">
@@ -33,19 +30,21 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
   <p><a href="/q/upload/other/20240626/1719391197157726.webp"><img src="/q/upload/other/20240626/1719391197157726.webp" alt="Sewing Products"/></a></p><p>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</p> 
 </div>
 <div class="social-proof">
- <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now $:12.99</a> <b>S/N: A18</b> </p>
+ <p><a href="https://www.paypal.com/ncp/payment/EF2BB6JFC32LN" target="_blank"> <img src="/q/py.webp" width="124" height="33"  alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing" /> Buy Now $:12.99</a> <b>S/N: A18</b> </p>
 </div> 
+<p><a href="/q/4.html">Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</a></p>
+<p><a href="/q/8.html">Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</a></p>
 <h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
 <h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
 
 </main>
 <aside>
   <div>
     <nav aria-labelledby="nav-header">
       <div>
-        <h2 id="nav-header">Site navigation</h2>
+        <h2>Site navigation</h2>
         <a class="active" href="https://zalalaa.com">Home</a>
         <a href="/q/abouts/">About Us</a>
         <a href="/q/patches/">Applique Patches</a>
@@ -57,10 +56,7 @@ Package Included: 1X 1 piece lace patches&nbsp;</p><p>&nbsp;This product will co
   </div>
 </aside>
 <footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
 </footer>
-<div class="background-logo">
-<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
-</div>
 </body>
 </html>
