--- a/q/patches/index.html
+++ b/q/patches/index.html
@@ -4,37 +4,43 @@
 <meta name="description" content="Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="theme-color" content="#D1F1FF">
-<link rel="stylesheet" href="/q/c.css">
+<link rel="stylesheet" href="/c.css">
 <header>
   <a href="https://zalalaa.com">
-    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" />
-    </div>
-    <h1>
-      zalalaa<span>.</span>com
-    </h1>
+    <div><img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="40" class="header__logo" /></div>
+    <h1>zalalaa<span>.</span>com</h1>
   </a>
 </header>
 <main class="index">
 <h2>Applique Patches</h2>
 <h4></h4>
 <p>Chinese Embroidery stickers.Embroidery,cross-stitch,needlework,needlepoint,fancyworkin.</p>
-<div class="social-proof">
-  <h2>Applique Patches</h2>
-</div>
-<div bys="grid">
-<a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><b>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing</b></a><br /><a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><b>Skull cloth patch</b></a><br /><a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><img src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><b>Embroidery flower bud lace flower applique</b></a><br /><a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><img src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><b>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace</b></a><br /><a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><img src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><b>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set</b></a><br /><a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><b>Tiger head Embroiderye sticker</b></a><br />
+<div class="grid">
+	
+    <a href="/q/18.html" title="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><img src="/q/upload/other/20240626/1719391194190860.webp" alt="Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing,2024-06-10 21:33:57"><p>Colorful Embroidered Lace Neckline Collar Floral Brown Leaf Applique Patches Scrapbooking Embossed Sewing $:12.99</p></a><br />
+	
+    <a href="/q/20.html" title="Skull cloth patch,2024-06-10 21:33:26"><img src="/q/upload/other/20240626/1719391022657043.webp" alt="Skull cloth patch,2024-06-10 21:33:26"><p>Skull cloth patch $:12</p></a><br />
+	
+    <a href="/q/13.html" title="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><img src="/q/upload/other/20240626/1719390770601289.webp" alt="Embroidery flower bud lace flower applique,2024-06-10 21:33:15"><p>Embroidery flower bud lace flower applique $:13.99</p></a><br />
+	
+    <a href="/q/11.html" title="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><img src="/q/upload/other/20240626/1719389747296309.webp" alt="Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace,2024-06-10 21:33:05"><p>Red, white and black car bone flower wedding headpiece lace handmade DIY bride headpiece material lace $:9.99</p></a><br />
+	
+    <a href="/q/22.html" title="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><img src="/q/upload/other/20240626/1719390299785042.webp" alt="Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set,2024-06-02 18:43:35"><p>Clothing accessories, embroidery, lace cloth, computer embroidery, flowers, hand sewn plum blossoms, water-soluble set $:12</p></a><br />
+	
+    <a href="/q/21.html" title="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><img src="/q/upload/other/20240626/1719390626901068.webp" alt="Tiger head Embroiderye sticker,2024-06-02 18:42:38"><p>Tiger head Embroiderye sticker $:12</p></a><br />
+	
   </div>
 <h3>Help</h3><ul>
-<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><h4>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</h4></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><h4>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</h4></a></li></ul>
+<li><a href="/q/4.html" title="Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.,2018-04-12 20:30:00"><p>Chinese embroidery with a long history has been an important part of the treasure of Chinese traditional art and crafts.</p></a></li><li><a href="/q/8.html" title="Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.,2018-04-12 10:10:18"><p>Chinese embroidery has four major traditional styles: Su, Shu, Xiang, and Yue.</p></a></li></ul>
 <h3>Video</h3><ul>
-<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><h4>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</h4></a></li></ul>
+<li><a href="/q/14.html" title="Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.,2018-04-12 10:26:28"><p>Chinese traditional embroidery craft, arts and culture in a unique ancient times so far in this ancient oriental land, distribution of its unique culture that charm, renowned throughout the world.</p></a></li></ul>
 
 </main>
 <aside>
   <div>
     <nav aria-labelledby="nav-header">
       <div>
-        <h2 id="nav-header">Site navigation</h2>
+        <h2>Site navigation</h2>
         <a class="active" href="https://zalalaa.com">Home</a>
         <a href="/q/abouts/">About Us</a>
         <a href="/q/patches/">Applique Patches</a>
@@ -46,10 +52,7 @@
   </div>
 </aside>
 <footer>
-  Made in <a href="https://zalalaa.com">Zalalaa.com</a>.
+  Made in <a href="https://zalalaa.com">Zalalaa.com</a>
 </footer>
-<div class="background-logo">
-<img src="/q/logo.webp" alt="Arts, Crafts &amp; Sewing" height="50" />
-</div>
 </body>
 </html>
